--- a/usertasksapi/templates/usertasksapi/index.html
+++ b/usertasksapi/templates/usertasksapi/index.html
@@ -29,8 +29,10 @@
 <div id='entity' class="d-none">{{entity}}</div>
  
 <!-- Bloco de conteúdo -->
-{% block content %}
+<body>
+{% block content %} 
 {% endblock %}
+</body>  
 
 <!-- Arquivos necessários para o Bootstrap -->
 <script src="{% static 'usertasksapi/js/jquery-3.5.1.min.js' %}"></script>
