--- a/usertasksapi/templates/usertasksapi/index.html
+++ b/usertasksapi/templates/usertasksapi/index.html
@@ -18,11 +18,11 @@
 
   <!-- Fonte do template: https://freefrontend.com/css-cards/ -->
   <link rel="stylesheet" href="{% static 'usertasksapi/css/card.css' %}">  
-  <link rel="stylesheet" href="{% static 'usertasksapi/css/bootstrap.min.css' %}">
+  <link rel="stylesheet" href="{% static 'usertasksapi/css/bootstrap/bootstrap.min.css' %}">
   <link rel="stylesheet" href="{% static 'usertasksapi/css/master.css' %}">
-  <link rel="stylesheet" href="{% static 'usertasksapi/css/fontawesome.min.css' %}">
-  <link rel="stylesheet" href="{% static 'usertasksapi/css/brands.min.css' %}">
-  <link rel="stylesheet" href="{% static 'usertasksapi/css/solid.min.css' %}">
+  <link rel="stylesheet" href="{% static 'usertasksapi/css/fontawesome/fontawesome.min.css' %}">
+  <link rel="stylesheet" href="{% static 'usertasksapi/css/fontawesome/brands.min.css' %}">
+  <link rel="stylesheet" href="{% static 'usertasksapi/css/fontawesome/solid.min.css' %}">
  
 </head>
 
@@ -30,18 +30,68 @@
  
 <!-- Bloco de conteúdo -->
 <body>
+  <!-- Modal -->
+  <div class="modal fade" id="delete-modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Fechar"><span aria-hidden="true">&times;</span></button> 
+        </div>
+        <div class="modal-body">Deseja realmente excluir este item? </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" id="del">Sim</button>
+          <button type="button" class="btn btn-default" data-dismiss="modal">N&atilde;o</button>
+        </div>
+      </div>
+    </div>
+  </div>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light"> 
+    <img src="{% static 'usertasksapi/img/favicon.png' %}" height='45px'> 
+    <button class="navbar-toggler" type="button" 
+    data-toggle="collapse" data-target="#conteudo-navbar" 
+    aria-controls="conteudo-navbar" aria-expanded="false" 
+    aria-label="Ativar navegação">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse m-2" id="conteudo-navbar">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active"> 
+        Gerenciamento de Tarefas de Usuários
+      </li>
+    </ul>           
+  </div>
+</nav>
+<!-- Breadcrumbs -->
+<nav aria-label="breadcrumb">
+  <div >
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item">
+        <a href="#">Home</a>
+      </li>
+      <li class="breadcrumb-item">
+        <a href="/user/">Usuário</a>
+      </li>  
+      {% if entity != 'user' %}
+      <li class="breadcrumb-item">
+        {{entity_pt}}
+      </li>    
+      {% endif %}     
+    </ol>
+  </div >
+</nav>
+<!-- Breadcrumbs -->
 {% block content %} 
 {% endblock %}
 </body>  
 
 <!-- Arquivos necessários para o Bootstrap -->
 <script src="{% static 'usertasksapi/js/jquery-3.5.1.min.js' %}"></script>
-<script src="{% static 'usertasksapi/js/bootstrap.min.js' %}"></script>
+<script src="{% static 'usertasksapi/js/bootstrap/bootstrap.min.js' %}"></script>
  
 
 <!-- Scripts -->
-<script src="{% static 'usertasksapi/js/scripts.js' %}"></script>
-
-<script src="{% static 'usertasksapi/js/fontawesome.min.js' %}"></script>
+<script src="{% static 'usertasksapi/js/scripts.js' %}"></script> 
+<script src="{% static 'usertasksapi/js/fontawesome/fontawesome.min.js' %}"></script>
  
 </html>
